--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script>
         // 页面加载时立即执行
         window.onload = function() {
-            const message = "当前网站涉及低俗淫秽内容，存在风险，请谨慎访问";
+            const message = "当前网站涉及低俗淫秽内容，存在风险，是否继续访问";
             
             // 使用浏览器原生确认弹窗
             // confirm 会返回 true (确定/继续) 或 false (取消/退出)
@@ -45,4 +45,5 @@
         };
     </script>
 </body>
+
 </html>
