--- a/about_han.html
+++ b/about_han.html
@@ -2,155 +2,101 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>私密记事本</title>
+    <title>羽含</title>
     <style>
-        :root {
-            --primary-color: #4a90e2;
-            --bg-color: #f5f7fa;
-        }
-
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: var(--bg-color);
-            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
+            background-color: #fcfcfc;
+            font-family: sans-serif;
         }
 
-        /* 登录容器 */
-        #login-container {
-            background: white;
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+        /* 密码输入区域样式 */
+        #auth-container {
             text-align: center;
-        }
-
-        input[type="password"] {
-            padding: 12px;
-            font-size: 18px;
-            width: 150px;
-            border: 2px solid #ddd;
+            padding: 20px;
+            border: 1px solid #ddd;
             border-radius: 8px;
-            outline: none;
-            transition: border-color 0.3s;
-            text-align: center;
-            letter-spacing: 5px;
+            background: #fff;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
         }
 
-        input[type="password"]:focus {
-            border-color: var(--primary-color);
+        /* 隐藏的内容区域样式 */
+        #content {
+            display: none;
+            width: 100%;
+            height: 100%;
+            padding: 20px;
+            box-sizing: border-box;
+            background-color: white;
+        }
+
+        /* 文字样式：仿宋，小四号 */
+        .msg {
+            font-family: "仿宋", "FangSong", "STFangsong", serif;
+            font-size: 16px; /* 小四号字体约为12pt/16px */
+            text-align: left;
+            color: #333;
+        }
+
+        input {
+            padding: 8px;
+            font-size: 16px;
+            width: 120px;
+            text-align: center;
+            border: 1px solid #ccc;
+            border-radius: 4px;
         }
 
         button {
-            margin-top: 15px;
-            padding: 10px 25px;
-            background: var(--primary-color);
+            padding: 8px 15px;
+            margin-left: 10px;
+            cursor: pointer;
+            background: #d32f2f;
             color: white;
             border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        /* 记事本容器 */
-        #main-content {
-            display: none; /* 初始隐藏 */
-            width: 90%;
-            max-width: 800px;
-            height: 80vh;
-            background: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-            flex-direction: column;
-        }
-
-        textarea {
-            flex-grow: 1;
-            width: 100%;
-            padding: 15px;
-            border: 1px solid #eee;
-            border-radius: 8px;
-            font-size: 16px;
-            line-height: 1.6;
-            resize: none;
-            box-sizing: border-box;
-            outline: none;
-        }
-
-        .header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 15px;
-        }
-
-        .status {
-            font-size: 12px;
-            color: #888;
+            border-radius: 4px;
         }
     </style>
 </head>
 <body>
 
-    <div id="login-container">
-        <h2>请输入访问密码</h2>
-        <input type="password" id="passwordInput" maxlength="4" placeholder="****">
-        <br>
-        <button onclick="checkPassword()">进入系统</button>
-        <p id="error-msg" style="color: red; font-size: 14px; margin-top: 10px;"></p>
+    <div id="auth-container">
+        <h3>请输入四位数密码</h3>
+        <input type="password" id="passInput" maxlength="4" placeholder="••••">
+        <button onclick="checkPassword()">确认</button>
+        <p id="error" style="color: red; font-size: 12px; display: none;">密码错误，请重试</p>
     </div>
 
-    <div id="main-content">
-        <div class="header">
-            <h3>我的随手记</h3>
-            <span id="saveStatus" class="status">已自动保存</span>
-            <button onclick="logout()" style="background: #ff4757; margin: 0;">退出</button>
-        </div>
-        <textarea id="noteArea" placeholder="在此处开始输入你的内容...内容会自动保存。"></textarea>
+    <div id="content">
+        <p class="msg">刘雨含
+        想要一个小阳台</p>
     </div>
 
     <script>
-        const CORRECT_PASSWORD = "2026"; // 这里修改你的四位数密码
-
-        // 检查密码
         function checkPassword() {
-            const input = document.getElementById('passwordInput').value;
-            const errorMsg = document.getElementById('error-msg');
-            
-            if (input === CORRECT_PASSWORD) {
-                document.getElementById('login-container').style.display = 'none';
-                document.getElementById('main-content').style.display = 'flex';
-                loadNote();
+            const input = document.getElementById('passInput').value;
+            const targetPassword = "2026"; // 您可以在这里修改密码
+
+            if (input === targetPassword) {
+                // 验证成功：隐藏验证器，移除居中布局，显示内容
+                document.getElementById('auth-container').style.display = 'none';
+                document.body.style.display = 'block'; 
+                document.getElementById('content').style.display = 'block';
             } else {
-                errorMsg.innerText = "密码错误，请重试";
-                document.getElementById('passwordInput').value = "";
+                document.getElementById('error').style.display = 'block';
             }
         }
 
-        // 监听回车键登录
-        document.getElementById('passwordInput').addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') checkPassword();
+        // 支持回车提交
+        document.getElementById('passInput').addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                checkPassword();
+            }
         });
-
-        // 自动保存逻辑
-        const noteArea = document.getElementById('noteArea');
-        const saveStatus = document.getElementById('saveStatus');
-
-        noteArea.addEventListener('input', () => {
-            saveStatus.innerText = "正在输入...";
-            localStorage.setItem('savedNote', noteArea.value);
-            
-            // 模拟保存延迟感
-            setTimeout(() => {
-                saveStatus.innerText = "已自动保存";
-            }, 800);
-        });
-
-        // 加载内容
-        function loadNote() {
-            const savedData 
+    </script>
+</body>
+</html>
