--- a/about_han.html
+++ b/about_han.html
@@ -72,8 +72,7 @@
     </div>
 
     <div id="content">
-        <p class="msg">刘雨含
-        想要一个小阳台</p>
+        <p class="msg">刘雨含  想要一个小阳台  想开烧烤摊，当老板娘</p>
     </div>
 
     <script>
