--- a/about_han.html
+++ b/about_han.html
@@ -72,7 +72,8 @@
     </div>
 
     <div id="content">
-        <p class="msg">刘雨含  想要一个小阳台  想开烧烤摊，当老板娘</p>
+        <p class="msg">刘雨含  电话：178xxxxxxxx  羡慕别人有一个小阳台  想开烧烤摊，当老板娘  温柔、深情、有一双诱人的双眼、有一头漂亮的长发、爱笑、阳光温暖、治愈
+        </p>
     </div>
 
     <script>
