--- a/yuhan.html
+++ b/yuhan.html
@@ -73,7 +73,8 @@
 
     <div id="content">
         <p class="msg">刘雨含  电话：178xxxxxxxx  羡慕别人有一个小阳台  想开烧烤摊，当老板娘  温柔、深情、有一双诱人的双眼、有一头漂亮的长发、爱笑、阳光温暖、治愈
-        </p>
+        爱好：琵琶、古典舞  喜欢逗我玩  讨厌虚伪的人  头发容易油  想去江苏玩  要等有钱了才谈恋爱  让我避雷重庆安全职业技术学院  有“暴力倾向”  上台讲话会尴尬  喜欢小动物
+        讨厌鬼火</p>
     </div>
 
     <script>
