--- a/yuhan.html
+++ b/yuhan.html
@@ -79,7 +79,7 @@
             温柔、深情、有一双诱人的双眼、有一头漂亮的长发、爱笑、阳光温暖、治愈
             爱好：琵琶、古典舞  喜欢逗我玩  讨厌虚伪的人  头发容易油  想去江苏玩
             要等有钱了才谈恋爱  让我避雷重庆安全职业技术学院  有“暴力倾向”
-            上台讲话会尴尬  喜欢小动物  讨厌鬼火
+            上台讲话会尴尬  喜欢小动物  吃蛋炒饭喜欢多放酱油  讨厌鬼火
             
             
         第一次心动是在初见的时候，之后随着感觉慢慢变淡，你也淡出了我的生活。时隔半年的再次相遇，彻底点燃了内心的喜欢，让我不顾一切想要靠近你，
