--- a/yuhan.html
+++ b/yuhan.html
@@ -66,7 +66,7 @@
 <body>
 
     <div id="auth-container">
-        <h3>请输入四位数密码</h3>
+        <h3>请输入四位数密码（本站仅用于记录我的所爱，望勿扰）</h3>
         <input type="password" id="passInput" maxlength="4" placeholder="••••">
         <button onclick="checkPassword()">确认</button>
         <p id="error" style="color: red; font-size: 12px; display: none;">密码错误，请重试</p>
@@ -84,7 +84,10 @@
             
         第一次心动是在初见的时候，之后随着感觉慢慢变淡，你也淡出了我的生活。时隔半年的再次相遇，彻底点燃了内心的喜欢，让我不顾一切想要靠近你，
         但同时不清楚你是否有恋人也让我内心犹豫不决，清楚你的过往之后，让我既心疼、又更加喜欢上你，随之而来的更多的但又考虑弥漫在我心头。我不知
-        为何总有东西要阻扰我内心那向你表达心意的想法。</p>
+        为何总有东西要阻扰我内心那向你表达心意的想法。
+        2026年3月1日
+        她对我忽冷忽热的，让我根本没有信心说出那句话，我想把事儿挑明了说，但是她还是没给我那个机会。不知下次再见要等到何时了。亿昔初见时，眼波明，黛眉轻。
+        </p>
     </div>
 
     <script>
