--- a/yuhan.html
+++ b/yuhan.html
@@ -87,7 +87,8 @@
         为何总有东西要阻扰我内心那向你表达心意的想法。
         2026年3月1日
         她对我忽冷忽热的，让我根本没有信心说出那句话，我想把事儿挑明了说，但是她还是没给我那个机会。不知下次再见要等到何时了。忆昔初见时，眼波明，黛眉轻。
-        </p>
+        同样发生在今天，我向她表明心意了，我看不出她的情绪如何，但我心理舒坦多了，我不知道就这样算不算我俩的缘分结束了，我只知道，我要继续向前，
+        同时也要考察我自己的内心，考察我能否坚守住这份喜欢。</p>
     </div>
 
     <script>
